workloads/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/proxy-read-timeout":"600","nginx.ingress.kubernetes.io/proxy-send-timeout":"600"},"name":"front","namespace":"default"},"spec":{"rules":[{"host":"forcecovid19.dakar.io","http":{"paths":[{"backend":{"serviceName":"front","servicePort":80}}]}}],"tls":[{"hosts":["forcecovid19.dakar.io"],"secretName": [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: demo-gitops
  namespace: demo-gitops
spec:
  rules:
  - host: demo-gitops.beopenit.com
    http:
      paths:
      - backend:
          serviceName: demo-gitops
          servicePort: 80
  tls:
  - hosts:
    - demo-gitops.beopenit.com
    secretName: beopenit
